echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-svc
  namespace: workshop
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echo-app
