echo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ing
  namespace: workshop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: workshop.local
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echo-svc
          servicePort: 80
